# SS

./: .env.example  .gitignore  .rulebook  AGENTS.md  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  ERROR_CODES.md  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt  start.ps1
.github/: pull_request_template.md
Audit/: 00_SUMMARY.txt  01_Executive_Summary.md  02_Deep_Dive_Analysis.md  03_Integrated_Action_Plan.md  04_Production_Readiness_UX_Audit.md  INDEX.md  README.md  api_contract_audit_report.md
assets/: desktop_pro_api.js  desktop_pro_blueprint_flow.js  desktop_pro_blueprint_model.js  desktop_pro_blueprint_render.js  desktop_pro_components.css  desktop_pro_core.js  desktop_pro_layout.css  desktop_pro_step3.css  desktop_pro_theme.css
docs/: architecture.md  legacy_analysis.md  state_machines.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
openspec/: AGENTS.md  README.md  project.md
releases/: .gitignore  README.md
scripts/: agent_controlplane_sync.sh  agent_pr_automerge_and_sync.sh  agent_pr_preflight.py  agent_worktree_setup.sh  audit_do_template_output_formats.py  bench_queue_throughput.py  build_release_nodocker.sh  contract_sync.py  contract_sync.sh  contract_sync_postprocess.py  export_openapi.py  openspec_spec_guard.py  regenerate_do_library_index.py  ss_release_zip.sh  ss_ssh_e2e.py  ss_windows_release_gate.py  ss_windows_release_gate_recoverability.py  ss_windows_release_gate_restart.py  ss_windows_release_gate_support.py
src/: __init__.py  cli.py  cli_run_template.py  cli_smoke_suite.py  cli_support.py  cli_templates.py  config.py  main.py  worker.py
tests/: asgi_client.py  async_overrides.py  conftest.py  test_admin_api.py  test_admin_jobs_api.py  test_admin_token_store.py  test_artifacts_api.py  test_column_normalizer.py  test_composition_executor_modes.py  test_composition_plan_validation.py  test_config_stata_cmd_parsing.py  test_do_file_generator.py  test_do_library_capability_manifest.py  test_do_library_family_taxonomy.py  test_do_library_index_consistency.py  test_do_library_meta_schema.py  test_do_library_placeholder_normalization.py  test_do_template_data_shape_tags.py  test_do_template_plan_support_template_params.py  test_do_template_repository.py  test_do_template_run_service.py  test_do_template_selection_service.py  test_do_template_selection_service_v2.py  test_dotenv_loading.py  test_draft_preview_column_candidates_v2.py  test_draft_preview_column_name_normalizations.py  test_draft_preview_llm_json.py  test_draft_preview_required_variables.py  test_draft_service.py  test_fake_object_store.py  test_file_worker_queue.py  test_frontend_static_mount.py  test_fs_do_template_adapters.py  test_graceful_shutdown.py  test_health_api.py  test_inputs_bundle_api.py  (+48 more)
(+2798 files in other folders)
