[project]
name = "ss"
version = "0.0.0"
description = "SS new architecture skeleton"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110.0",
  "pydantic>=2.6.0",
  "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "mypy>=1.8.0",
  "pytest>=7.4",
  "pytest-repeat>=0.9.3",
  "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["assets/stata_do_library"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
warn_unused_configs = true

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
